--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,7 @@ jobs:
     docker:
       - image: circleci/python:3.6
     steps:
-      # シェルスクリプトのコマンド実行
-      - run: echo 'hello world'  
+      # ソースコードのチェックアウト
+      - checkout
+      # unittestコマンドの実行
+      - run: python test_calculations.py 
